--- a/css/style.scss
+++ b/css/style.scss
@@ -87,8 +87,10 @@ $grey: #edeef0;
    text-align: center;
    padding-left: 10px;
    padding-right: 10px;
+   cursor: pointer;
+   font-weight: 600;
    &:hover {
-      box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.75);
+   box-shadow: 1px 1px 1px 1px rgba(0,100,200,0.75);
    }
 }
 .single {
@@ -175,6 +177,9 @@ $grey: #edeef0;
 }
 .sec {
    flex: 1;
+}
+.active {
+   box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.75);
 }
 @media only screen and (max-width: 500px) {
    .GridItem {
